src/test/deca/syntax/invalid/lex_floathex_valid.deca
// Test reconnaissance flottant ecrit en hexadecimale
// Attendu:  pas d'erreur a chaque ligne est reconnu un flottant

0xaf.09p+11
0xaf.09P11
0xaf.09p-11
0xaf.09p+11f
0xaf.09P11f
0xaf.09p-11f
0xaf.09p+11F
0xaf.09P11F
0xaf.09p-11F




